refactor, devibe